--- a/ConsultorioDDD/Views/EstadoCivil/Details.cshtml
+++ b/ConsultorioDDD/Views/EstadoCivil/Details.cshtml
@@ -13,6 +13,14 @@
             <form class="form-horizontal" role="form">
                 <div class="form-group">
                     <div class="display-label">
+                        <label class="col-sm-2 text-info">Código</label>
+                    </div>
+                    <div class="col-sm-10">
+                        <label class="control-label">@Html.DisplayFor(model => model.Id)</label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="display-label">
                         <label class="col-sm-2 text-info">@Html.DisplayNameFor(model => model.Descricao)</label>
                     </div>
                     <div class="col-sm-10">
@@ -26,6 +34,22 @@
                     </div>
                     <div class="col-sm-10">
                         <label class="control-label">@(Model.Ativo == 1 ? "Sim" : "Não")</label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="display-label">
+                        <label class="col-sm-2 text-info">Data Criação</label>
+                    </div>
+                    <div class="col-sm-10">
+                        <label class="control-label">@Html.DisplayFor(model => model.AddedDate)</label>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="display-label">
+                        <label class="col-sm-2 text-info">Data Atualização</label>
+                    </div>
+                    <div class="col-sm-10">
+                        <label class="control-label">@Html.DisplayFor(model => model.ModifiedDate)</label>
                     </div>
                 </div>
             </form>
